<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context=".WelcomePage">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/logo"
        android:layout_gravity="center_horizontal"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/award"
        android:textStyle="bold"
        android:textSize="65sp"
        android:textAlignment="center"/>

    <TextView
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/enter_email"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/emailET"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:layout_marginTop="25dp"
        android:paddingStart="20dp"
        tools:ignore="RtlSymmetry" />

    <Button
        android:id="@+id/signInBtn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@color/btnColor"
        android:textColor="@color/white"
        android:text="@string/sign_in"
        android:layout_marginTop="30dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>