<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilterPage">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        android:textSize="35sp"
        android:textStyle="bold"
        android:padding="20dp"/>

    <ImageView
        android:id="@+id/closeIV"
        android:layout_width="85dp"
        android:layout_height="85dp"
        android:src="@drawable/ic_close_black_24dp"
        android:padding="20dp"
        android:layout_alignParentEnd="true"/>

    <Button
        android:id="@+id/btn1"
        android:layout_below="@id/title"
        android:text="Poin: 10000 - 500000"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_button"
        android:textColor="@color/voucherColor"
        android:padding="5dp"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btn2"
        android:layout_below="@id/btn1"
        android:text="Type: Voucher, Product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_button"
        android:textColor="@color/voucherColor"
        android:padding="5dp"
        android:layout_margin="10dp"/>

    <Button
        android:id="@+id/btn3"
        android:layout_below="@id/btn2"
        android:text="Clean All Filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/border_button"
        android:textColor="@color/voucherColor"
        android:padding="5dp"
        android:layout_margin="10dp"/>

    <TextView
        android:id="@+id/subtitle"
        android:layout_below="@id/btn3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/awards_type"
        android:textSize="20sp"
        android:paddingTop="20dp"
        android:paddingStart="20dp"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <LinearLayout
        android:id="@+id/CB1"
        android:layout_below="@id/subtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/allTypeCB"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/all_type"
                android:textSize="20sp"
                android:padding="10dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/CB2"
        android:layout_below="@id/CB1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/vouchersCB"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vouchers"
                android:textSize="20sp"
                android:padding="10dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/CB3"
        android:layout_below="@id/CB2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/productsCB"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/products"
                android:textSize="20sp"
                android:padding="10dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_below="@id/CB3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/othersCB"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/others"
                android:textSize="20sp"
                android:padding="10dp"/>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:text="@string/filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/voucherColor"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_margin="20dp" />

</RelativeLayout>